Tweaking spacing for wrap-around editor names on Issue home
Line height was too tall for long author names to wrap without
weirdness.

--- a/scss/issue.scss
+++ b/scss/issue.scss
@@ -466,7 +466,8 @@ $hero-height: 30rem;
   #about-this-issue {
     .editor-info {
       .editor-name {
-        font-size: 0.85rem;        
+        font-size: 0.85rem;
+        line-height: 1.2rem;
       }
       .editor-title {
         font-size: 0.75rem;
